# openAgent

./: .env.development  .env.example  .gitignore  README.md  check_document_26.py  check_documents_simple.py  check_recent_documents.py  create_new_test_user.py  create_test_user.py  manual_process_doc26.py  openapi_current.json  pyproject.toml  test_api_direct.py  test_auth.py  test_document_processing.py  test_document_segmentation.py  test_http_auth.py  test_login_api.py  test_new_user_auth.py  test_password.py  test_simple_login.py  test_token_validation.py  test_upload_word.py  test_word_processing.py
backend/: .env.example  add_user_columns.py  assign_test_user_admin_role.py  db_config_key.key  embedding_consistency_report.md  requirements.txt  test_agent.py  test_custom_tools.py  test_document_processing_flow.py  test_knowledge_api.py  test_llm_config.py  test_simple_pgvector.py  test_upload_api.py  test_vector_search.py  test_zhipu_embeddings.py
backend/chat_agent/: __init__.py  main.py
backend/configs/: settings.yaml
backend/docs/: custom_tool_guide.md
backend/mcpserver/: README.md  __init__.py  api.py  base.py  config.py  main.py  manager.py  requirements.txt  start_server.bat  start_server.py
backend/open_agent/: __init__.py  main.py
backend/tests/: agent_modes_test.py  analyze_query_issue.py  connectPgVector.py  create_test_user.py  debug_config.py  debug_password.py  init_db.py  pandas_test.py  recreate_test_user.py  reset_demo_user.py  reset_test_user_password.py  search_test.py  (+43 more)
configs/: settings.yaml
frontend/: .env.development  .env.example  auto-imports.d.ts  components.d.ts  deepseek_html_20250827_6e6ea4.html  deepseek_html_20250827_87515a.html  env.d.ts  index.html  package-lock.json  package.json  test-delete.html  vite.config.ts  workflow-2025-08-31.json  工作流编排.html  工作流编排2.html  新版本-合并.html
tests/: check_user_exists.py  create_test_user.py  debug_login_flow.py  debug_vector_store.py  reset_demo_user.py  test_api_auth.py  test_chat_agent_config.py  test_config_direct.py  test_config_from_root.py  test_config_simple.py  test_document_chunks.py  test_embedding.py  test_fastapi_request.py  test_new_user_login.py
(+235 files in other folders)
